--- a/configs/dataset/co3d_donut.yaml
+++ b/configs/dataset/co3d_donut.yaml
@@ -10,13 +10,12 @@ render:
 
 data:
   dataset_type: co3d
-  data_path: /cluster/angmar/lhoellein/viewset-diffusion/co3d/teddybear # change this line
+  data_path: /cluster/angmar/lhoellein/viewset-diffusion/co3d/donut # change this line
   encode_rays: true
   input_size:
   - 128
   - 128
-  category: teddybear
+  category: donut
   sequence_idx: None
   white_background: false
   rotation_augmentation: true
-
