--- a/code/configs/default_config.yaml
+++ b/code/configs/default_config.yaml
@@ -3,6 +3,7 @@ defaults:
   - wandb: defaults
   - hydra: defaults
   - _self_
+output_dir: /cluster/angmar/lhoellein/viewset-diffusion/outputs/debug-training
 general:
   random_seed: 0
   devices: 1
