--- a/src_code/configs/dataset/co3d_teddybear.yaml
+++ b/src_code/configs/dataset/co3d_teddybear.yaml
@@ -17,6 +17,6 @@ data:
   - 128
   category: teddybear
   sequence_idx: None
-  white_background: false
+  white_background: true
   rotation_augmentation: true
 
