--- a/src_code/configs/dataset/co3d_vase.yaml
+++ b/src_code/configs/dataset/co3d_vase.yaml
@@ -17,5 +17,5 @@ data:
   - 128
   category: vase
   sequence_idx: None
-  white_background: false
+  white_background: true
   rotation_augmentation: true
